--- a/2023/2023.ipynb
+++ b/2023/2023.ipynb
@@ -1278,36 +1278,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 274,
+   "execution_count": 328,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(14046, 808107741406756)"
+      ]
+     },
+     "execution_count": 328,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def parse24(line):\n",
     "    pos, vel = line.split(' @ ')\n",
     "    f = lambda x: list(map(lambda x: decimal.Decimal(x), x.split(', ')))\n",
     "    return f(pos), f(vel)\n",
     "\n",
-    "data24 = data(24, parse24)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 95,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 95,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "def day24(data, minb, maxb):\n",
+    "data24 = data(24, parse24)\n",
+    "\n",
+    "def day24_1(data, minb, maxb):\n",
     "    count = 0\n",
     "    for i, (a1, velA) in enumerate(data[:-1]):\n",
     "        a2 = np.add(a1, velA)\n",
@@ -1325,101 +1318,8 @@
     "            miny = max(minb, y1 if velA[1] > 0 else minb, y3 if velB[1] > 0 else minb)\n",
     "            maxy = min(maxb, y1 if velA[1] < 0 else maxb, y3 if velB[1] < 0 else maxb)\n",
     "            if minx <= intx <= maxx and miny <= inty <= maxy:\n",
-    "                # print(intx, inty)\n",
     "                count += 1\n",
     "    return count\n",
-    "\n",
-    "day24(data24, 200000000000000, 400000000000000)\n",
-    "# wrong 14034"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 276,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def parse24(line):\n",
-    "    pos, vel = line.split(' @ ')\n",
-    "    f = lambda x: list(map(int, x.split(', ')))\n",
-    "    return f(pos), f(vel)\n",
-    "\n",
-    "data24 = data(24, parse24)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 277,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "891705673259702"
-      ]
-     },
-     "execution_count": 277,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# x + vx*t = a + va*t\n",
-    "# x-a = t(va-vx)\n",
-    "# (x-a)/(va-vx) = t = (y-b)/(vb-vy)\n",
-    "# (x-a)*(vb-vy) = (y-b)*(va-vx)\n",
-    "# (x-a) * (vb-vy) = (y-b) * (va-vx)\n",
-    "# (x-a) * (vy-vb) = (y-b) * (vx-va)\n",
-    "\n",
-    "def day24_2(data):\n",
-    "    def system(args):\n",
-    "        x, y, z, vx, vy, vz = args\n",
-    "        minimize = []\n",
-    "        i = random.randint(0, len(data)-3)\n",
-    "        for i in data[i:i+3]:\n",
-    "            ((a, b, c), (va, vb, vc)) = i\n",
-    "            # ((x1,y1,z1),(xv1,yv1,zv1)) = i\n",
-    "            # minimize.append((x-x1)*(vy-yv1) - (y-y1)*(vx-xv1))\n",
-    "            # minimize.append((x-x1)*(vz-zv1) - (z-z1)*(vx-xv1))\n",
-    "            minimize += [\n",
-    "                (x-a)*(vb-vy) - (y-b)*(va-vx),\n",
-    "                (x-a)*(vc-vz) - (z-c)*(va-vx)\n",
-    "                # (x-a)*(vy-vb) - (y-b)*(vx-va),\n",
-    "                # (x-a)*(vz-vc) - (z-c)*(vx-va)\n",
-    "            ]\n",
-    "        # print(minimize)\n",
-    "        return minimize\n",
-    "    x, y, z, vx, vy, vz = fsolve(system,data[0][0]+data[0][1], xtol=1e-16)\n",
-    "    # print(x+y+z, x, y, z, vx, vy, vz)\n",
-    "    return sum(map(round, [x, y, z]))\n",
-    "\n",
-    "day24_2(data24)\n",
-    "# 808107741406756"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 317,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "808107741406756"
-      ]
-     },
-     "execution_count": 317,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "def parse24(line):\n",
-    "    pos, vel = line.split(' @ ')\n",
-    "    f = lambda x: list(map(int, x.split(', ')))\n",
-    "    return f(pos), f(vel)\n",
-    "\n",
-    "data24 = data(24, parse24)\n",
     "\n",
     "def day24_2(data):\n",
     "    solver = z3.Solver()\n",
@@ -1443,108 +1343,7 @@
     "    result = solver.model()\n",
     "    return result[x].as_long() + result[y].as_long() + result[z].as_long()\n",
     "\n",
-    "day24_2(data24)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 305,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "expression must be affine: vars: 6 vars: 0 coeffs: -1 coeffs: 1\n",
-      "1\n"
-     ]
-    }
-   ],
-   "source": [
-    "def parse24(line):\n",
-    "    pos, vel = line.split(' @ ')\n",
-    "    f = lambda x: list(map(int, x.split(', ')))\n",
-    "    return f(pos), f(vel)\n",
-    "\n",
-    "data24 = data(24, parse24)\n",
-    "\n",
-    "def day24_2(data):\n",
-    "    model = cp_model.CpModel()\n",
-    "    # model = cp_model.CpModel()\n",
-    "    # inf = sys.maxsize\n",
-    "    times = {}\n",
-    "    x = model.NewIntVar(-1000, 1000, \"x\")\n",
-    "    y = model.NewIntVar(-1000, 1000, \"y\")\n",
-    "    z = model.NewIntVar(-1000, 1000, \"z\")\n",
-    "    vx = model.NewIntVar(-1000, 1000, \"vx\")\n",
-    "    vy = model.NewIntVar(-1000, 1000, \"vy\")\n",
-    "    vz = model.NewIntVar(-1000, 1000, \"vz\")\n",
-    "\n",
-    "    # a = model.NewConstant(np.integer(a))\n",
-    "    # b = model.NewConstant(np.integer(b))\n",
-    "    # c = model.NewConstant(np.integer(c))\n",
-    "    # va = model.NewConstant(np.integer(va))\n",
-    "    # vb = model.NewConstant(np.integer(vb))\n",
-    "    # vc = model.NewConstant(np.integer(vc))\n",
-    "\n",
-    "    # vars = [None] * len(data) * 10\n",
-    "\n",
-    "    for i, hail in enumerate(data):\n",
-    "    # i, hail = 0, data[0]\n",
-    "        (a, b, c), (va, vb, vc) = hail\n",
-    "        # t = solver.NumVar(0, inf, f't_{i}')\n",
-    "    #     times[i] = model.NewIntVar(0, inf, str(i))\n",
-    "    #     print(a, b, c, va, vb, vc)\n",
-    "        a = model.NewConstant(a)\n",
-    "        b = model.NewConstant(b)\n",
-    "        c = model.NewConstant(c)\n",
-    "        va = model.NewConstant(va)\n",
-    "        vb = model.NewConstant(vb)\n",
-    "        vc = model.NewConstant(vc)\n",
-    "        t1 = model.NewIntVar(-1000, 1000, \"t1\")\n",
-    "        t2 = model.NewIntVar(-1000, 1000, \"t2\")\n",
-    "        t3 = model.NewIntVar(-1000, 1000, \"t3\")\n",
-    "        t4 = model.NewIntVar(-1000, 1000, \"t4\")\n",
-    "        model.AddMultiplicationEquality(t1, (x-a), (vb-vy))\n",
-    "        model.AddMultiplicationEquality(t2, (x-a), (vc-vz))\n",
-    "        model.AddMultiplicationEquality(t3, y-b, va-vx)\n",
-    "        model.AddMultiplicationEquality(t4, z-c, va-vx)\n",
-    "        model.Add(t1 == t3)\n",
-    "        model.Add(t2 == t4)\n",
-    "    # model.Add(c + times[i]*vc == z + times[i]*vz)\n",
-    "    # print(a, times[i], va, x, vx)\n",
-    "    # solver.Minimize((x-a)*(vy-vb) - (y-b)*(vx-va))\n",
-    "    # print(b, times[i],  vb, y, vy)\n",
-    "    # solver.Add(b + times[i]*vb == y + times[i]*vy)\n",
-    "    # solver.Add(c + times[i]*vc == z + times[i]*vz)\n",
-    "\n",
-    "    solver = cp_model.CpSolver()\n",
-    "    print(model.Validate())\n",
-    "    status = solver.Solve(model)\n",
-    "    print(status)\n",
-    "\n",
-    "day24_2(data24)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 141,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "cannot create 'numpy.integer' instances",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[141], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m a \u001b[38;5;241m=\u001b[39m \u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43minteger\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "\u001b[0;31mTypeError\u001b[0m: cannot create 'numpy.integer' instances"
-     ]
-    }
-   ],
-   "source": [
-    "a = np.integer(2)"
+    "day24_1(data24, 200000000000000, 400000000000000), day24_2(data24)"
    ]
   },
   {
@@ -1552,31 +1351,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "posA + velA * X = posB + velB * X\n",
-    "posA - posB = X(velB - velA)\n",
-    "X = (posA - posB)/(velB - velA)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0.5, 0.667, 0.75])"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.divide([1, 2, 3], [2, 3, 4])"
-   ]
+   "source": []
   }
  ],
  "metadata": {
