--- a/2023/2023.ipynb
+++ b/2023/2023.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 306,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,13 +15,8 @@
     "import math\n",
     "import numpy as np\n",
     "import networkx as nx\n",
-    "from ortools.sat.python import cp_model\n",
-    "from ortools.linear_solver import pywraplp\n",
-    "import random\n",
     "import re\n",
     "from typing import Callable, TypeVar\n",
-    "import sys\n",
-    "from scipy.optimize import fsolve\n",
     "import z3\n",
     "\n",
     "np.set_printoptions(edgeitems=30, linewidth=100000, \n",
@@ -1322,6 +1317,7 @@
     "    return count\n",
     "\n",
     "def day24_2(data):\n",
+    "    # using z3 as suggested in https://old.reddit.com/r/adventofcode/comments/18pnycy/2023_day_24_solutions/\n",
     "    solver = z3.Solver()\n",
     "    x = z3.Int('x')\n",
     "    y = z3.Int('y')\n",
@@ -1348,10 +1344,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def parse25(data):\n",
+    "    g = nx.Graph()\n",
+    "    for line in data:\n",
+    "        start, ends = line.split(': ')\n",
+    "        for end in ends.split(' '):\n",
+    "            g.add_edge(start, end)\n",
+    "    return g\n",
+    "\n",
+    "data25 = parse25(data(25))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(3, (['cmg', 'lhk', 'lsr', 'qnr', 'pzl', 'nvd', 'frs', 'rsh', 'rzs'], ['jqt', 'bvb', 'rhn', 'hfx', 'xhk', 'ntq']))\n"
+     ]
+    }
+   ],
+   "source": [
+    "def day25(g):\n",
+    "    n, groups = nx.stoer_wagner(g)\n",
+    "    assert n == 3\n",
+    "    return functools.reduce(lambda x, y: x*len(y), groups, 1)\n",
+    "\n",
+    "day25(data25)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(['cmg', 'lhk', 'lsr', 'qnr', 'pzl', 'nvd', 'frs', 'rsh', 'rzs'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(['jqt', 'bvb', 'rhn', 'hfx', 'xhk', 'ntq'])"
+   ]
   }
  ],
  "metadata": {
