--- a/2023/2023.ipynb
+++ b/2023/2023.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,9 +76,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(55816, 54980)"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "data1 = data(1)\n",
     "\n",
@@ -111,9 +122,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2377, 71220)"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def format2(line):\n",
     "    def tuplefy(round):\n",
@@ -149,9 +171,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(521515, 69527306)"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "data3 = data(3)\n",
     "\n",
@@ -185,9 +218,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(25651, 19499881)"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def parse4(line):\n",
     "    winning, have = map(\n",
@@ -213,9 +257,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1181555926, 37806486)"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "debug=False\n",
     "\n",
@@ -278,9 +333,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(252000, 36992486)"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "data6 = data(6, lambda x: list(map(int, x.split(':')[-1].split())))\n",
     "\n",
@@ -303,9 +369,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(248812215, 250057090)"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "data7 = data(7, lambda x: x.split())\n",
     "\n",
@@ -338,9 +415,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(18673, 17972669116327)"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def parse8(data):\n",
     "    instructions, nodes = data[0], {}\n",
@@ -371,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +468,7 @@
        "(2008960228, 1097)"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -408,9 +496,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(6882, 491)"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "data10 = np.array(data(10, list))\n",
     "\n",
@@ -474,9 +573,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Counter({1000000: 742305960572, 2: 9445168})"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "data11 = np.array(data(11, list))\n",
     "\n",
@@ -499,9 +609,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(7857, 28606137449920)"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def parse12(line):\n",
     "    springs, conditions = line.split(' ')\n",
@@ -545,9 +666,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(31739, 31539)"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def parse13(lines):\n",
     "    result = []\n",
@@ -641,9 +773,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(112773, 98894)"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "data14 = np.array(data(14, list))\n",
     "\n",
@@ -692,9 +835,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(501680, 241094)"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "data15 = list(itertools.chain.from_iterable(data(15, lambda x: x.split(','))))\n",
     "\n",
@@ -736,9 +890,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(6883, 7228)"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "data16 = np.array(data(16, list))\n",
     "\n",
@@ -784,7 +949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -793,7 +958,7 @@
        "(1039, 1201)"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -864,7 +1029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -873,7 +1038,7 @@
        "(40131, 104454050898331)"
       ]
      },
-     "execution_count": 188,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -926,7 +1091,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -935,7 +1100,7 @@
        "(331208, 121464316215623)"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1005,7 +1170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -1014,7 +1179,7 @@
        "(873301506, 241823802412393)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1086,7 +1251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -1095,7 +1260,7 @@
        "(3617, 596857397104703)"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1150,7 +1315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -1159,7 +1324,7 @@
        "(405, 61297)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1220,7 +1385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -1229,7 +1394,7 @@
        "(2314, 6874)"
       ]
      },
-     "execution_count": 165,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1273,7 +1438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 328,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -1282,7 +1447,7 @@
        "(14046, 808107741406756)"
       ]
      },
-     "execution_count": 328,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1344,9 +1509,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 80,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "531437"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def parse25(data):\n",
     "    g = nx.Graph()\n",
@@ -1356,69 +1532,14 @@
     "            g.add_edge(start, end)\n",
     "    return g\n",
     "\n",
-    "data25 = parse25(data(25))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(3, (['cmg', 'lhk', 'lsr', 'qnr', 'pzl', 'nvd', 'frs', 'rsh', 'rzs'], ['jqt', 'bvb', 'rhn', 'hfx', 'xhk', 'ntq']))\n"
-     ]
-    }
-   ],
-   "source": [
+    "data25 = parse25(data(25))\n",
+    "\n",
     "def day25(g):\n",
     "    n, groups = nx.stoer_wagner(g)\n",
     "    assert n == 3\n",
     "    return functools.reduce(lambda x, y: x*len(y), groups, 1)\n",
     "\n",
     "day25(data25)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "9"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(['cmg', 'lhk', 'lsr', 'qnr', 'pzl', 'nvd', 'frs', 'rsh', 'rzs'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "6"
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(['jqt', 'bvb', 'rhn', 'hfx', 'xhk', 'ntq'])"
    ]
   }
  ],
