--- a/2024/2024.ipynb
+++ b/2024/2024.ipynb
@@ -2,12 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "from typing import Callable, TypeVar\n",
+    "from functools import reduce\n",
+    "from collections import Counter\n",
     "\n",
     "\n",
     "np.set_printoptions(edgeitems=30, linewidth=100000, \n",
@@ -22,11 +24,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1941353, 22539317)"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def day1():\n",
+    "    loc1, loc2 = list(zip(*data(1, lambda x: [int(y) for y in x.split()])))\n",
+    "    part1 = sum([abs(x[0]-x[1]) for x in zip(sorted(loc1), sorted(loc2))])\n",
+    "    counts = Counter(loc2)\n",
+    "    part2 = sum(x*counts[x] for x in loc1)\n",
+    "    return part1, part2\n",
+    "\n",
+    "day1()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def day1():\n",
+    "def day2():\n",
     "    return"
    ]
   }
