--- a/2024/2024.ipynb
+++ b/2024/2024.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,6 +10,7 @@
     "from typing import Callable, TypeVar\n",
     "from functools import reduce\n",
     "from collections import Counter\n",
+    "import itertools\n",
     "\n",
     "\n",
     "np.set_printoptions(edgeitems=30, linewidth=100000, \n",
@@ -19,12 +20,16 @@
     "\n",
     "def data(day: int, parser: Callable[[str], T] = str) -> list[T]:\n",
     "  with open(f\"./data/day{day}.txt\") as f:\n",
-    "    return [parser(line.strip()) for line in f.readlines()]"
+    "    return [parser(line.strip()) for line in f.readlines()]\n",
+    "  \n",
+    "processors = {\n",
+    "  'int_list': lambda x: [int(y) for y in x.split()]\n",
+    "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -33,15 +38,16 @@
        "(1941353, 22539317)"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "\n",
     "def day1():\n",
-    "    loc1, loc2 = list(zip(*data(1, lambda x: [int(y) for y in x.split()])))\n",
-    "    part1 = sum([abs(x[0]-x[1]) for x in zip(sorted(loc1), sorted(loc2))])\n",
+    "    loc1, loc2 = zip(*data(1, processors['int_list']))\n",
+    "    part1 = sum(abs(x[0]-x[1]) for x in zip(sorted(loc1), sorted(loc2)))\n",
     "    counts = Counter(loc2)\n",
     "    part2 = sum(x*counts[x] for x in loc1)\n",
     "    return part1, part2\n",
@@ -51,12 +57,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([356, 413])"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def day2():\n",
+    "    def check_safe(report):\n",
+    "        ascending = sorted(report)\n",
+    "        diffs = np.diff(ascending)\n",
+    "        return max(diffs) <= 3 and min(diffs) >= 1 and (\n",
+    "            report == ascending or\n",
+    "            report == list(reversed(ascending))\n",
+    "        )\n",
+    "\n",
+    "    def check_safe_damp(report):\n",
+    "        if check_safe(report):\n",
+    "            return 1, 1\n",
+    "        for damped in itertools.combinations(report, len(report)-1):\n",
+    "            if check_safe(list(damped)):\n",
+    "                return 0, 1\n",
+    "        return 0, 0\n",
+    "\n",
+    "    reports = data(2, processors['int_list'])\n",
+    "    safe = np.array((0,0))\n",
+    "    for report in reports:\n",
+    "        safe += check_safe_damp(report)\n",
+    "    return safe\n",
+    "\n",
+    "day2()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def day2():\n",
-    "    return"
+    "def day3():\n",
+    "    pass"
    ]
   }
  ],
