--- a/2024/2024.ipynb
+++ b/2024/2024.ipynb
@@ -2,15 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "from typing import Callable, TypeVar\n",
-    "from functools import reduce\n",
     "from collections import Counter\n",
     "import itertools\n",
+    "import regex as re\n",
+    "from intervaltree import Interval, IntervalTree\n",
     "\n",
     "\n",
     "np.set_printoptions(edgeitems=30, linewidth=100000, \n",
@@ -102,10 +103,52 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(182780583, 90772405)"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def day3():\n",
-    "    pass"
+    "    def mul_strings(s):\n",
+    "        x, y = s.split(',')\n",
+    "        return int(x)*int(y)\n",
+    "\n",
+    "    instructions = ''.join(data(3))\n",
+    "    matches = list(re.finditer(r'mul\\((\\d+,\\d+)\\)', instructions))\n",
+    "    conds = list(re.finditer(r\"don't\\(\\).+?do\\(\\)\", instructions))\n",
+    "    donts = IntervalTree([Interval(*cond.span()) for cond in conds])\n",
+    "    result = sum([mul_strings(mul[1]) * (1 if not donts[mul.span()[0]] else 1j) for mul in matches])\n",
+    "    return int(result.real+result.imag), int(result.real)\n",
+    "\n",
+    "day3()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[\"xmul(2,4)&mul[3,7]!^don't()_mul(5,5)+mul(32,64](mul(11,8)undo()?mul(8,5))\"]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def day4():\n",
+    "    print(data(0))\n",
+    "\n",
+    "day4()"
    ]
   }
  ],
