--- a/2024/2024.ipynb
+++ b/2024/2024.ipynb
@@ -216,22 +216,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'tset'"
+       "1948"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 147,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "'test'[::-1]"
+    "def day4():\n",
+    "    grid = np.array(data(4, lambda x: np.array(list(x))))\n",
+    "    target = 'MAS'\n",
+    "    rev = target[::-1]\n",
+    "    ymax, xmax = grid.shape\n",
+    "    count = 0\n",
+    "    # print(grid)\n",
+    "\n",
+    "    def get_neighbors(current, distance):\n",
+    "        col, row = int(current.real), int(current.imag)\n",
+    "        target_letter = target[distance]\n",
+    "        if grid[row, col] != target_letter:\n",
+    "            return\n",
+    "        if distance == len(target)-1:\n",
+    "            total.add(current)\n",
+    "            return\n",
+    "        for v in [1+1j, 1-1j, -1+1j, -1-1j]:\n",
+    "            new = current + v\n",
+    "            x, y = int(new.real), int(new.imag)\n",
+    "            if not (y >= 0 and x >= 0 and y < ymax and x < xmax):\n",
+    "                continue\n",
+    "            yield new\n",
+    "    \n",
+    "    hits = set()\n",
+    "    for j in range(ymax):\n",
+    "        for i in range(xmax):\n",
+    "            total = set()\n",
+    "            coordinate = i+1j*j\n",
+    "            search(grid, coordinate, get_neighbors)\n",
+    "            for x in total:\n",
+    "                distance = x-coordinate\n",
+    "                if abs(distance.real) == 2 and abs(distance.imag) == 2:\n",
+    "                    center = coordinate + distance/2\n",
+    "                    if center in hits:\n",
+    "                        count += 1\n",
+    "                    hits.add(center)\n",
+    "                    # print(coordinate, x, distance, center)\n",
+    "\n",
+    "    return count\n",
+    "\n",
+    "day4()"
    ]
   }
  ],
